@@ -76,6 +76,7 @@ export(
        ## .Call "Summary_mpfr"
        , "all.equal"
        , "aperm"
+       , "apply" ## <- we make it S4 generic
        , "as.vector"
        , "atan2"
        , "beta" , "lbeta"
@@ -132,6 +133,7 @@ export(
 
 exportMethods(
               ## "own generics":
+              "apply",
 
               ## "other generics"
               "abs", "log", "sign"
@@ -150,6 +152,9 @@ exportMethods(
 )
 
 S3method(c, mpfr)
+
+S3method(as.array, mpfr)
+S3method(as.matrix, mpfr)
 
 S3method(print, mpfr)
 S3method(print, mpfr1)
