@@ -1,3 +1,10 @@
+2011-09-08  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/array.R (applyMpfr): -> apply() method for "mfprArray"
+	(mpfr2array): fix for the case of  dim(<mpfrArray>) <- <newDim>
+
+	* man/mpfrArray.Rd: add apply() examples
+
 2011-08-23  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/unirootR.R (unirootR): R-only version of uniroot(), carefully ensuring
